initial chapter structure and some text for first chapter

--- a/references.bib
+++ b/references.bib
@@ -21,3 +21,11 @@
   year = 	 {2013},
   journal =  {Advanced Systems Lab, ETH Zurich}
 }
+@book{jain2008art,
+  title={The Art Of Computer Systems Performance Analysis:},
+  author={Jain, R.},
+  isbn={9788126519057},
+  url={http://books.google.ch/books?id=eOR0kJjgMqkC},
+  year={2008},
+  publisher={Wiley India Pvt. Limited}
+}
